IBX-8769: Fixed multi file upload errors alignment

--- a/src/bundle/Resources/public/scss/ui/modules/muti-file-upload/_upload.item.scss
+++ b/src/bundle/Resources/public/scss/ui/modules/muti-file-upload/_upload.item.scss
@@ -1,6 +1,6 @@
 .c-upload-list-item {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     background: $ibexa-color-white;
     padding: 0;
     margin: calculateRem(4px) 0;
